--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,1 +1,1 @@
-@import url('https://fonts.googleapis.com/css2?family=Alfa+Slab+One&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Alfa+Slab+One:100,200,300,400,500,600,700,800,900");
