--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,10 +2,13 @@
 
 body {
   margin: 0;
+  overflow: hidden;
   font-family: "Alfa Slab One", "sans-serif";
   background-image: url("https://www.toptal.com/designers/subtlepatterns/patterns/concrete_wall.png");
   color: #fff;
-  text-shadow: black 1px 0 10px; }
+  text-shadow: black 1px 0 10px; 
+  height: auto;
+  }
 
   @media (min-width: 320px) {
     body {
@@ -87,7 +90,9 @@ i {
   }
 
  .nav {
-  display: inline-block; }
+  display: inline-block; 
+  }
+
   @media (min-width: 320px) {
     .nav {
       margin: 5px 5px; } 
@@ -183,42 +188,42 @@ i {
     padding: 5px;
     bottom: 0;
     left: 0;
-    border-color: #34a853;
+    border-color: #2daf4f;
    }
 
 .panel#red {
     top: 0;
     right: 0;
-    border-color: #ea4335;
+    border-color: #db4031;
    }
 
 .panel#blue {
     padding: 5px;  
     bottom: 0;
     right: 0;
-    border-color: #4285f4; 
+    border-color: #3c7de6; 
   }
 
 .panel#yellow {
     top: 0;
     left: 0;
-    border-color: #fbbc05; 
+    border-color: #f3b703; 
 }
 
 .panel#green:active, .panel.lit#green {
-    background-color: rgba(52, 168, 83, 0.9);
+    background-color: rgba(52, 168, 83, 0.75);
    }
 
 .panel#red:active, .panel.lit#red {
-    background-color: rgba(234, 67, 53, 0.9);
+    background-color: rgba(234, 67, 53, 0.75);
    }
 
 .panel#blue:active, .panel.lit#blue {
-    background-color: rgba(66, 133, 244, 0.9);
+    background-color: rgba(66, 133, 244, 0.75);
    }
 
 .panel#yellow:active, .panel.lit#yellow {
-    background-color: rgba(251, 188, 5, 0.9);
+    background-color: rgba(251, 188, 5, 0.75);
    }
 
 /* Status Bar */
@@ -226,6 +231,7 @@ i {
 .status-bar {
     text-align: center;  
     margin-top: 5px;
+    margin-bottom: 5px;
     margin: 0 auto;
     font-weight: bold; 
   }
@@ -253,11 +259,15 @@ i {
 /* Footer */
     .footer-text {
     font-family: "Alpha Slab One", sans-serif;
-    font-weight: 80%;
+    font-size: 50%;
     letter-spacing: 1px;
+    text-align: center;
+    position: absolute;
+    right: 0;
     bottom: 0;
     left: 0;
-    text-align: center;
+    padding: 16px;
+    
  }
 
     .footer-text a:hover,
