buttons color changed

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -34,7 +34,7 @@ body {
  /* Header */
 
 .nav-wrapper .btn {
-  color:#F26B38;
+  color: #63e38a;
   margin-top: 5px;
   margin-left: 0;
   margin-right: 0;
