--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -280,9 +280,9 @@ i {
 
 /* Footer */
 
-    .footer-text {
+.footer-text {
     font-family: "Alpha Slab One", sans-serif;
-    font-size: 50%;
+    font-size: 45%;
     letter-spacing: 1px;
     text-align: center;
     position: absolute;
@@ -293,9 +293,12 @@ i {
     
  }
 
-    .footer-text a:hover,
-    .footer-text a:focus {
-    text-decoration: none; 
-    color: #db4031;
-   };
+.footer-text a{
+    color: #E15A46
+    }
+
+.footer-text a:hover,
+.footer-text a:focus {
+    color: #fff;
+   }
   }
