--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -78,6 +78,7 @@ i {
     font-size: 80%;
 }
 
+
 /* Container */
 /* Start button - Round status - Strict mode styling*/
 .container {
@@ -284,7 +285,7 @@ i {
 
 .footer-text {
     font-family: "Alpha Slab One", sans-serif;
-    font-size: 45%;
+    font-size: 50%;
     letter-spacing: 1px;
     text-align: center;
     position: absolute;
@@ -296,19 +297,54 @@ i {
  }
 
 .footer-text a{
-    color: #E15A46
+    color: #f26b38
     }
 
 .footer-text a:hover,
 .footer-text a:focus {
-    color: #fff;
+    color: #fff
    }
-  }
+
 
 /* Instuctions modal styling*/
 
-body .modal-backdrop.fade.in {  /*Was not able to style the modal. Needed to debug*/
+body .modal-backdrop.fade.in {  /* I was unable to override Bootstrap modal CSS. Needed to debug.*/
     z-index: 0 !important;
 }
+.modal-content {
+    background-image: url("https://www.toptal.com/designers/subtlepatterns/patterns/tweed.png");
+    font-family: "Alfa Slab One", "sans-serif";
+}
+
+.modal-header-title,
+.modal-body-title {
+    color: #fff;
+    text-shadow: black 1px 0 10px; 
+}
+
+.close,
+#modal-btn {
+    color: #f26b38;
+    text-shadow: 1px 1px 1px black;
+    background: none;
+    border: none;
+}
+
+.close {
+    opacity: 1;
+}
+
+.close:hover,
+#modal-btn:hover {
+    color: #f26b38;
+}
+
+.modal-body-text {
+    letter-spacing: 1px;
+    color: #63e38a;
+    text-shadow: 1px 1px 1px black;
+}
+
+
 
 
